# lumineer

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml
.claude/: launch.json  (+1 more)
ai/: .env.example  Dockerfile  README.md  main.py  pyproject.toml
ai/app/: __init__.py
ai/app/agents/: __init__.py  context.py  path_agent.py  search_agent.py  skill_gap_agent.py  triage_agent.py
ai/app/config/: container.py  settings.py
ai/app/domain/entities/: course.py
ai/app/domain/ports/: __init__.py  embedding.py  llm.py  vector_store.py
ai/app/domain/usecases/: __init__.py  get_course_detail.py  search_courses.py
ai/app/guardrails/: __init__.py
ai/app/guardrails/input/: __init__.py  _utils.py  injection_detector.py  offtopic_detector.py  pii_sanitizer.py  toxicity_filter.py
ai/app/guardrails/output/: __init__.py  hallucination_checker.py  pii_restorer.py  privacy_filter.py
ai/app/guardrails/system/: __init__.py  cost_tracker.py  rate_limiter.py
ai/app/infrastructure/: __init__.py
ai/app/infrastructure/embeddings/: __init__.py  openai_embedding.py  openai_embedding_adapter.py
ai/app/infrastructure/formatters/: __init__.py  base.py  json_formatter.py  toon_formatter.py
ai/app/infrastructure/ingestion/: chunker.py  csv_loader.py  llm_preprocessor.py
ai/app/infrastructure/reranking/: __init__.py  base.py  cross_encoder_reranker.py  heuristic_reranker.py  no_reranker.py
ai/app/infrastructure/vectordb/: __init__.py  qdrant_adapter.py  qdrant_search_adapter.py
ai/app/interfaces/: __init__.py
ai/app/interfaces/api/: routes.py
ai/app/interfaces/mcp/: __init__.py  auth.py  server.py
ai/app/observability/: __init__.py  langfuse_tracer.py  metrics.py  token_tracker.py
ai/app/prompts/: path.md  search.md  skill_gap.md  triage.md
ai/app/tools/: __init__.py  analyze_skill_gap.py  generate_learning_path.py  search_courses.py
ai/evals/: README.md
ai/evals/benchmarks/: conftest.py  test_path_eval.py  test_search_eval.py  test_skill_gap_eval.py
ai/evals/datasets/: path_golden.json  search_golden.json  skill_gap_golden.json
ai/scripts/: run_evals.py  run_rag_evals.py  seed_data.py
ai/tests/: __init__.py
ai/tests/unit/: test_mcp_auth.py  test_mcp_server.py
(+253 files in other folders)
