[project]
name = "lumineer-ai"
version = "0.1.0"
description = "Lumineer AI Processing Service"
requires-python = ">=3.12"
dependencies = [
    "litestar[standard]>=2.14",
    "pydantic-settings>=2.7",
    "uvicorn[standard]>=0.34",
    "openai>=1.68",
    "qdrant-client>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.9",
    "mypy>=1.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.hatch.build.targets.wheel]
packages = ["app"]
